Faça pagina de receita, add link e corrija o head da homepage

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="pt-BR">
 
 <head>
-  <title>Odin recipes</title>
+  <meta charset="UTF-8">
+  <title>Receitas do caioba</title>
 </head>
 
 <body>
-  <h1>Odin recipes</h1>
+  <h1>Receitas do caioba</h1>
+  <ul>
+    <li><a href="./mousse.html">Mousse de chocolate</a></li>
+  </ul>
 </body>
 
 </html>
