Finalize página de mousse, add descricao,receitas e passo a passo

--- a/mousse.html
+++ b/mousse.html
@@ -8,6 +8,30 @@
 
 <body>
   <h1>Mousse de chocolate</h1>
+  <img src="https://assets.delirec.com/images/JYbP9Ecn2pMHrjbF1DGDu8XzyCp1/recipe/a23eab6f-81ea-4c41-af9d-8619d0906684-Mousse-de-chocolate--gallery-0" alt="mousse de chocolate" width="300" height="300">
+  <p>O mousse de chocolate é uma sobremesa leve, aerada e deliciosa feita principalmente com chocolate, ovos, açúcar e, às vezes, creme de leite. Sua textura é cremosa e suave, com uma consistência semelhante a uma espuma macia.</p>
+  <h2>Ingredientes : </h2>
+  <ul>
+    <li>200g de chocolate meio amargo (picado)</li>
+    <li>3 ovos (separados em gemas e claras)</li>
+    <li>2 colheres de sopa de açúcar</li>
+    <li>1 colher de chá de essência de baunilha</li>
+    <li>1 pitada de sal</li>
+    <li>1 xícara de creme de leite fresco</li>
+    <li>Chocolate ralado ou raspas de chocolate para decorar (opcional)</li>
+  </ul>
+
+  <h2>Passo a passo : </h2>
+  <ol>
+    <li>Derreta o chocolate em banho-maria ou no micro-ondas, mexendo de tempos em tempos até ficar completamente derretido e liso. Deixe esfriar um pouco.</li>
+    <li>Em uma tigela grande, bata as gemas dos ovos até ficarem mais claras e aeradas. Adicione a essência de baunilha ao chocolate derretido e misture bem. Em seguida, acrescente essa mistura às gemas e incorpore bem.</li>
+    <li>Em outra tigela, bata as claras dos ovos com uma pitada de sal até formar picos firmes. Gradualmente, adicione o açúcar enquanto continua batendo até obter um merengue firme e brilhante.</li>
+    <li>Com cuidado, incorpore metade das claras batidas à mistura de chocolate e gemas, mexendo delicadamente com movimentos de baixo para cima para manter a leveza da mousse. Adicione o restante das claras e misture até ficar homogêneo.</li>
+    <li>Na mesma tigela em que bateu as claras, bata o creme de leite fresco até obter picos firmes.</li>
+    <li>Incorpore suavemente o creme de leite batido à mistura de chocolate e claras, dobrando cuidadosamente para não perder a aeração.</li>
+    <li>Distribua a mousse em taças individuais ou em um recipiente maior e leve à geladeira por pelo menos 4 horas, ou até que esteja firme.</li>
+    <li>Antes de servir, se desejar, decore com raspas de chocolate ou chocolate ralado.</li>
+  </ol>
 </body>
 
 </html>
