Faça pagina de cocada cremosa, add link na home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Receitas do caioba</h1>
   <ul>
     <li><a href="./mousse.html">Mousse de chocolate</a></li>
+    <li><a href="./cocada.html">Cocada cremosa</a></li>
   </ul>
 </body>
 
