Faça página de pavê de paçoquinha, add link na home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ul>
     <li><a href="./mousse.html">Mousse de chocolate</a></li>
     <li><a href="./cocada.html">Cocada cremosa</a></li>
+    <li><a href="./pave.html">Pavê de paçoquinha</a></li>
   </ul>
 </body>
 
